--- a/Serialization/Serialization.csproj
+++ b/Serialization/Serialization.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
+    <Compile Include="BooksGetter.cs" />
     <Compile Include="Catalog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
